k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sk025-tls-ingress
  namespace: skala-practice
spec:
  ingressClassName: public-nginx
  rules:
  - host: sk025-tls.skala25a.project.skala-ai.com
    http:
      paths:
      - backend:
          service:
            name: sk025-my-app
            port:
              number: 8080
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: sk025-my-app
            port:
              number: 8081
        path: /actuator
        pathType: Prefix
      - backend:
          service:
            name: sk025-my-app
            port:
              number: 8080
        path: /swagger
        pathType: Prefix
      - backend:
          service:
            name: sk025-my-app
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sk025-tls.skala25a.project.skala-ai.com
    secretName: sk025-manual-tls-secret
